# ai-monitor

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
ai/ai/: __init__.py  core.py  py.typed  version.py
tests/: __init__.py  conftest.py  test_core.py
