[project]
name = "ai"
version = "0.2.0"
description = "AI Monitor Package"
authors = [
    {name = "Santo K Thomas", email = "santokalayil@gmail.com"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "requests>=2.32.3,<3.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "ai", from = "ai" }
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
